// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  aria-label="cart.discount: foo"
  className="ui-shared__discount-badge"
  data-test-id="foo"
  tabIndex={-1}
>
  <Text
    aria-hidden={true}
    className="css-7wvaon  theme__discount-badge"
    params={
      [
        null,
      ]
    }
    string="foo"
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  aria-label="cart.discount: SAVE {0}%"
  className="ui-shared__discount-badge"
  data-test-id="SAVE {0}%"
  tabIndex={-1}
>
  <Text
    aria-hidden={true}
    className="css-7wvaon  theme__discount-badge"
    params={
      [
        20,
      ]
    }
    string="SAVE {0}%"
  />
</div>
`;
